# domain-adaptation-segmentation

./: .env.example  .gitattributes  .gitignore  AGENT_HANDOFF.md  AUGMENTATION_METHODS.md  DATA_DISCOVERY.md  EXPERIMENT_TRACKER.md  HPC_TRAINING.md  KAGGLE_TRAINING.md  README.md  REMOTE_TRAINING.md  pyproject.toml  requirements.txt
configs/classes/: indraeye_seg_active12.yaml
configs/datasets/: indraeye_ir_oracle.yaml  indraeye_rgb_to_ir.yaml
configs/experiments/: e01_source_rgb_yolo11s.yaml  e02_full_gray_yolo11s.yaml  e03_box_guided_gray_yolo11s.yaml  e04_mga_yolo11s.yaml  e05_ba_mga_yolo11s.yaml  e06_ir_oracle_yolo11s.yaml  e07_source_rgb_yolo11x.yaml  e08_ba_mga_yolo11x.yaml
data/manifests/: augmentation_summary.json  copied_files.csv  dataset_summary.json  label_issues.csv  processed_validation_class_counts.csv  processed_validation_issues.csv  processed_validation_report.json  skipped_files.csv  validation_class_counts.csv  validation_issues.csv  validation_report.json
data/manifests/dataset_yamls/: ba_mga.yaml  box_guided_gray.yaml  full_gray.yaml  ir_oracle.yaml  mga.yaml  (+1 more)
scripts/local/: copy_dataset.ps1  generate_augmented_datasets.ps1  package_for_kaggle.ps1  sample_augmentations.ps1  validate_dataset.ps1  validate_processed_datasets.ps1
scripts/remote/: hpc_check.sh  hpc_cuda_env.sh  hpc_run_e01_to_e06.sh  hpc_run_e07_e08.sh  hpc_smoke_test.sh  kaggle_run_e01_to_e06.sh  kaggle_setup.sh  kaggle_smoke_test.sh  slurm_e01_to_e06.sbatch  slurm_e07_e08.sbatch  slurm_env_diagnose.sbatch  slurm_smoke.sbatch
src/domain_adaptation_segmentation/: __init__.py
(+12 files in other folders)
